# RaptorHardware

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  api.cpp  context.cpp  context.h  modules.cpp  search.cpp
cmake/: raptorhw-config.cmake
common/: CMakeLists.txt
common/include/: raptorhw_candidate.h  raptorhw_custom_property.h  raptorhw_device.h  raptorhw_gain.h  raptorhw_module.h  raptorhw_util.h
common/src/: candidate.cpp  custom_property.cpp  device.cpp  gain.cpp  util.cpp
demo/: CMakeLists.txt  main.cpp
demos/simple/: CMakeLists.txt  main.cpp
devices/airspy/: CMakeLists.txt
devices/airspy/include/: raptorhw_device_airspy.h
devices/airspy/src/: gain_macros.h  main.cpp
devices/airspyhf/: CMakeLists.txt
devices/airspyhf/include/: raptorhw_device_airspyhf.h
devices/airspyhf/src/: candidate.cpp  candidate.h  custom_properties.cpp  custom_properties.h  device.cpp  device.h  gain.cpp  gain.h  internal.h  module.cpp
devices/rtlsdr/: CMakeLists.txt
devices/rtlsdr/include/: raptorhw_device_rtlsdr.h
devices/rtlsdr/src/: conversion_table.cpp  conversion_table.h  info.cpp  info.h  main.cpp
include/: raptorhw.h
src/: candidate.cpp  defines.h  gain.cpp  instance.cpp  search.cpp
src/devices/airspy/: CMakeLists.txt  include.h  main.cpp
src/devices/rtlsdr/: CMakeLists.txt  include.h  main.cpp
